SCVx_tutorial_updated

--- a/Tutorials_SCP/SCVx_GuSTO_tutorial.ipynb
+++ b/Tutorials_SCP/SCVx_GuSTO_tutorial.ipynb
@@ -19899,7 +19899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -31280,8 +31280,7 @@
     "        y_eye = eye_radius * np.sin(u) * np.sin(v) + pos[1]\n",
     "        z_eye = eye_radius * np.cos(v) + pos[2]\n",
     "\n",
-    "        # Crear una matriz de color uniforme (por ejemplo, azul con un solo valor)\n",
-    "        color_value = np.full_like(x_eye, 0.5)  # 0.5 es un tono de azul en la escala\n",
+    "        color_value = np.full_like(x_eye, 0.5)\n",
     "\n",
     "        eye_spheres.append(go.Surface(\n",
     "            x=x_eye, y=y_eye, z=z_eye, surfacecolor=color_value,\n",
