SCVx_Waskiri_updated_working

--- a/COGU_algorithms/SCVx_official_template_cvxpy_cvxpygen.ipynb
+++ b/COGU_algorithms/SCVx_official_template_cvxpy_cvxpygen.ipynb
@@ -13,7 +13,10 @@
    "id": "d45c7b79",
    "metadata": {},
    "source": [
-    "This template does not take in account time dilation."
+    "This template does not take in account time dilation.\n",
+    "$$\n",
+    "\\renewcommand{\\bm}[1]{\\boldsymbol{#1}}\n",
+    "$$"
    ]
   },
   {
@@ -30,7 +33,6 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\renewcommand{\\bm}[1]{\\boldsymbol{#1}}\n",
     "\\begin{align*}\n",
     "    \\text{min} \\quad &\\int_{0}^{t_f}||\\bm{\\tau}(t)||_2^2dt+\\int_0^{t_f}||\\bm{a}(t)||_2^2dt\\\\\n",
     "    \\text{s.t.}\\quad&\n",
